--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -5,7 +5,10 @@ services:
     container_name: portainer
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - ./data:/data
+      - ./portainer-data:/data  # Persist Portainer's data
     ports:
       - "9000:9000"
     restart: always
+
+volumes:
+  portainer-data:
