--- a/teleport/docker-compose.yml
+++ b/teleport/docker-compose.yml
@@ -4,9 +4,13 @@ services:
     image: public.ecr.aws/gravitational/teleport-distroless:16.4.12
     container_name: teleport
     volumes:
-      - ./teleport.yaml:/etc/teleport/teleport.yaml
+      - ./teleport.yaml:/etc/teleport/teleport.yaml  # Mount your Teleport configuration file
+      - teleport-data:/var/lib/teleport  # Persist Teleport data like session logs, keys, etc.
     ports:
-      - "3023:3023"
-      - "3025:3025"
-      - "3080:3080"
-    restart: always
+      - "3023:3023"  # Port for SSH access
+      - "3025:3025"  # Port for the Teleport Proxy (SSH Gateway)
+      - "3080:3080"  # Web UI access
+    restart: always  # Ensure the container restarts on failure
+
+volumes:
+  teleport-data:  # Define a volume for persistent Teleport data
