--- a/vault/docker-compose.yml
+++ b/vault/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: vault
     volumes:
       - ./vault.hcl:/vault/config/vault.hcl
-      - ./file:/vault/file
+      - vault-data:/vault/data  # Ensuring persistent storage for Vault's internal state
     environment:
       VAULT_ADDR: "http://0.0.0.0:8200"
       SKIP_SETCAP: "true"
@@ -15,3 +15,5 @@ services:
     ports:
       - "8200:8200"
     restart: always
+volumes:
+  vault-data:
