fixed bind9, working on terraform

--- a/bind9/config/named.conf
+++ b/bind9/config/named.conf
@@ -1,3 +1,4 @@
+include "/etc/bind/named.conf.key"
 acl internal {
     192.168.1.0/24;
 };
@@ -13,4 +14,5 @@ options {
 zone "home.devnexuslab.me" {
     type master;
     file "/etc/bind/zones/db.home.devnexuslab.me";
+    update-policy { grant tsig-key zonesub any; };
 };
