--- a/postgres/docker-compose.yml
+++ b/postgres/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
   postgres:
-    image: postgres:15-alpine
+    image: postgres:17.2
     container_name: postgres
     environment:
       POSTGRES_USER: postgres
